# torch-extension-template

./: .clangd  .envrc  .gitignore  CMakeLists.txt  README.md  pyproject.toml
csrc/: CMakeLists.txt
csrc/include/: add.cuh
csrc/lib/: add.cu  pybind.cc
python/extension/: __init__.pyi
scripts/: find_torch.py
tests/: test_add.py
