[project]
name = "extension"
version = "0.0.1"
dependencies = ["torch", "pybind11"]
authors = [{ name = "Fr4nk1in", email = "fushen@mail.ustc.edu.cn" }]
description = "Torch C++/CUDA Extension Template"

[build-system]
requires = ["scikit-build-core", "pybind11", "torch >= 2.0"]
build-backend = "scikit_build_core.build"
